input and button form row misalignment fix attempt 1

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -793,6 +793,11 @@ a.nav-button-link:visited {
     cursor: pointer!important
 }
 
+.form-row {
+    display: flex;
+    align: center; 
+}
+
 
 
 
